[gd_scene load_steps=7 format=3 uid="uid://cpq3jk1cn0pjl"]

[ext_resource type="Script" uid="uid://co5htfny84gie" path="res://scripts/buildings/compressor.gd" id="1_r2q3c"]

[sub_resource type="BoxShape3D" id="BoxShape3D_3clb0"]

[sub_resource type="CapsuleMesh" id="CapsuleMesh_emlho"]

[sub_resource type="CylinderMesh" id="CylinderMesh_emlho"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_emlho"]
emission_enabled = true

[sub_resource type="BoxMesh" id="BoxMesh_r2q3c"]
resource_local_to_scene = true
material = SubResource("StandardMaterial3D_emlho")
size = Vector3(1, 0.1, 0.05)

[node name="Compressor" type="Area3D" groups=["Compresores"]]
collision_layer = 4
collision_mask = 2
script = ExtResource("1_r2q3c")

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
shape = SubResource("BoxShape3D_3clb0")

[node name="MeshInstance3D" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(1, 0, 0, 0, 0.5, 0, 0, 0, 1, 0, 0, 0)
mesh = SubResource("CapsuleMesh_emlho")

[node name="MeshInstance3D2" type="MeshInstance3D" parent="CollisionShape3D"]
transform = Transform3D(0.33612984, 0, 0, 0, -2.3916353e-08, -0.33612984, 0, 0.5471424, -1.4692702e-08, 0, 2.1402146e-08, -0.24481201)
mesh = SubResource("CylinderMesh_emlho")

[node name="UI_Root" type="Node3D" parent="."]

[node name="TextoCantidad" type="Label3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.606621, -0.3490098)
pixel_size = 0.01
billboard = 1
text = "0/10"
font_size = 45

[node name="BarraVisual" type="MeshInstance3D" parent="."]
unique_name_in_owner = true
transform = Transform3D(0.99996924, 0, 0.029692095, 0, 0.99999994, 0, -0.007836447, 0, 3.7888575, 0, 0.5640616, 0.17170334)
mesh = SubResource("BoxMesh_r2q3c")
